First iteration of review changes

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -35,7 +35,7 @@ block page
 
         h3 Research
         div
-          +wikilink('typing_methods') Typing methods
+          +wikilink('typing_methods') Alphanumeric input
           +wikilink('gyro_ratcheting') Gyro ratcheting and flick stick
           +wikilink('dual_gyro') Dual gyro
           +wikilink('finger_sensing') Finger sensing
