--- a/src/static/style.css
+++ b/src/static/style.css
@@ -599,6 +599,16 @@ table.manual .right {
   text-align: right;
 }
 
+table.inline td,
+table.inline th {
+  padding: 10px;
+  border-right: 1px solid hsl(0, 0%, 30%);
+  border-bottom: 1px solid hsl(0, 0%, 30%);
+}
+table.inline th {
+  background: hsl(0, 0%, 20%);
+}
+
 /* FOOTER ================================================================== */
 footer {
   width: 100%;
