Style fixes and minor fixes

--- a/src/pug/blog/typing_methods.pug
+++ b/src/pug/blog/typing_methods.pug
@@ -140,7 +140,7 @@ block content
   )
 
   h4 3.2. Characters preview and commit
-  p Since we do not want to rely on OS integration #[em (consideration 3)], one of the potential solutions we tried is to apply the concept of #[em character preview and commit] that was used in #[em feature phones], in which a single button or action is used for cycling between several characters, and only later the character is "committed" when certain conditions are met (other button is pressed, or after a defined period of time).
+  p Since we do not want to rely on OS integration (#[em (consideration 3]), one of the potential solutions we tried is to apply the concept of #[em character preview and commit] that was used in #[em feature phones], in which a single button or action is used for cycling between several characters, and only later the character is "committed" when certain conditions are met (other button is pressed, or after a defined period of time).
   +figure(
     'F',
     'Character preview and commit',
@@ -284,8 +284,8 @@ block content
   ul
     li #[em Thumbstick] is used for basic pattern recognition (glyphs).
     li Glyph is evaluated when returning to center.
-    li Glyph patterns are designed to resemble the characters they represent, so they are easier to remember. To avoid conflicting with #[em consideration 6].
-    li To decrease manipulation complexity all glyphs start/end from the center into a cardinal direction (left, right, up, down). To avoid conflicting with #[em consideration 9].
+    li Glyph patterns are designed to resemble the characters they represent, so they are easier to remember. (#[em consideration 6]).
+    li All glyphs start/end from the center into a cardinal direction (left, right, up, down). So do not use diagonals, reducing manipulation complexity (#[em consideration 9]).
     li Shorter patterns are used for more frequent characters (in english).
     li Note: It is usable with a single finger, or even no fingers.
     li Note: Glyph shapes could exposed in the profiles, so it becomes user customizable.
@@ -415,7 +415,7 @@ block content
   hr
   h3 6. Next steps
   p The plan is to gather feedback, and to do beta testing with our testers. Based on the results, some of these mechanisms may become part of future firmware releases. These will then be iterated and improved accordingly.
-  p Another blog article may provide further details on those tests, iterations and their results, as well as the according findings and conclusions.
+  p Another blog article may provide further details on those tests, iterations and their results, as well as the findings and conclusions.
 
 
   hr
