Fix reference not renamed

--- a/src/pug/blog/typing_methods.pug
+++ b/src/pug/blog/typing_methods.pug
@@ -349,7 +349,7 @@ block content
       td Soon
       td In progress 🟢
     tr
-      th Analog keypad
+      th Character cycling
       td Yes
       td Yes
       td
