Introduction list as list, Renamed "Keyboard rows"

--- a/src/pug/blog/typing_methods.pug
+++ b/src/pug/blog/typing_methods.pug
@@ -12,9 +12,10 @@ block content
 
   h3 1. Introduction
   p In some scenarios it is necessary to input alphanumeric characters while using a device without a physical keyboard (e.g. mobile phones, videogame consoles, smart TV) or when using a keyboard is not possible (for example due to a disability). Solutions for these cases have been created in the past:
-  p #[+ax('https://en.wikipedia.org/wiki/Feature_phone') Feature phones] used keypad typing #[i (Fig. A)].
-  p Smartphones uses touchscreen keyboards #[i (Fig. B)].
-  p Videogame consoles and computers uses on-screen virtual keyboards #[i (Fig. C)].
+  ul
+    li #[+ax('https://en.wikipedia.org/wiki/Feature_phone') Feature phones] used keypad typing #[i (Fig. A)].
+    li Smartphones uses touchscreen keyboards #[i (Fig. B)].
+    li Videogame consoles and computers uses on-screen virtual keyboards #[i (Fig. C)].
   +figure(
     'A',
     'Nokia 3210 keypad (1999)',
@@ -222,7 +223,7 @@ block content
     li Note: Named as a tribute to Daisywheel (daisy 8 leafs / clover 4 leafs).
 
   div: br
-  h4 4.4. Querty rows
+  h4 4.4. Keyboard rows
   ul
     li #[em L4] and #[em R4] buttons pre-selects groups of 10 characters.
     li Then #[em Dpad], #[em Select] and #[em ABXY] buttons are used to select the final character.
@@ -361,7 +362,7 @@ block content
       td
       td Discontinued
     tr
-      th Qwerty rows
+      th Keyboard rows
       td Yes
       td
       td
