Added progress report 10, Renamed alphanumeric entry filename

--- a/src/pug/blog/report_9.pug
+++ b/src/pug/blog/report_9.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #9
-  +news_header('10 March 2023', 'shop_opening', '')
+  +news_header('10 March 2023', 'shop_opening', 'report_10')
 
   h3 Firmware 0.88.0
   p We released #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.88.0') Firmware 0.88.0] for the Alpakka controller, with plenty of improvements and fixes:
