--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,17 +25,17 @@ block page
 
         h3 News
         div
+          +wikilink('report_10') Progress report 10
           +wikilink('report_9') Progress report 9
           +wikilink('shop_opening') Shop opening
           +wikilink('report_8') Progress report 8
-          +wikilink('report_7') Progress report 7
           //- Keep only last 3 reports.
           +wikilink('reports_all') Old progress reports
           +wikilink('live') We are live
 
         h3 Research
         div
-          +wikilink('typing_methods') Alphanumeric input
+          +wikilink('alphanumeric_input') Alphanumeric input
           +wikilink('gyro_ratcheting') Gyro ratcheting and flick stick
           +wikilink('dual_gyro') Dual gyro
           +wikilink('finger_sensing') Finger sensing
