Added links to case, buttons and electronics

--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -16,8 +16,8 @@ block page
           td Alpakka firmware source code
           td: +ax('https://github.com/inputlabs/alpakka_firmware') GitHub
         tr
-          td Alpakka firmware latest build
-          td: +ax('https://github.com/inputlabs/alpakka_firmware/releases/latest') GitHub
+          td Alpakka firmware latest builds
+          td: +ax('https://github.com/inputlabs/alpakka_firmware/releases') GitHub
 
     div.box
       h2 Printed Circuit Board
@@ -41,6 +41,15 @@ block page
         tr
           td STL and M3F files for 3D printing
           td: +ax('https://github.com/inputlabs/alpakka_case/releases/latest') GitHub
+        tr
+          td Front case
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-front-case') Input Labs shop
+        tr
+          td Back case
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-back-case') Input Labs shop
+        tr
+          td Buttons set
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-buttons-set') Input Labs shop
         tr
           td Conductive hexagon
           td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-conductive-hexagon') Input Labs shop
@@ -81,6 +90,9 @@ block page
         tr
           td Trigger buttons (4x)
           td: +ax('https://www.lcsc.com/product-detail/Tactile-Switches_ALPSALPINE-SKQGAFE010_C202424.html') LCSC shop
+        tr
+          td Electronics set (all included)
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-electronics-set') Input Labs shop
 
     div.box
       h2 Bolts and nuts
@@ -96,7 +108,7 @@ block page
           td M2.5 DIN-934 Hex nut (8x)
           td: +ax('https://www.mcmaster.com/91828A113/') Reference
         tr
-          td Alpakka bolts kit (all included)
+          td Alpakka bolts set (all included)
           td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-bolts-kit') Input Labs shop
 
     div.box
