--- a/src/pug/blog/report_10.pug
+++ b/src/pug/blog/report_10.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #10
-  +news_header('31 March 2023', 'report_9', '')
+  +news_header('31 March 2023', 'report_9', 'report_11')
 
   h3 Alphanumeric input research and testing
   p We conducted research on typing methods on devices with limited inputs, and done a first round on internal alpha testing. We wrote the blog entry #[+a('alphanumeric_input') Alphanumeric input] with our preliminary findings.
