--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_11') Progress report 11
     li: +a('report_10') Progress report 10
     li: +a('report_9') Progress report 9
     li: +a('report_8') Progress report 8
