--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,7 +10,7 @@ block content
   hr
 
   ul
-    li #[+ax('https://www.heise.de/news/Alpakka-Der-Wunsch-Gamecontroller-mit-Mausfunktion-8977493.html') Heise Online] Alpakka: Der Wunsch-Gamecontroller mit Mausfunktion
+    li #[+ax('https://www.heise.de/news/Alpakka-Der-Wunsch-Gamecontroller-mit-Mausfunktion-8977493.html') Heise Online] Alpakka: The Dream-Gamecontroller with Mouse-functionality
     ul
       li: i "The Alpakka can be completely customized via software and hardware. Thanks to gyro sensors it even replaces the mouse and thus brings uncompromising gaming to the couch."
 
