12th progress report

--- a/src/pug/blog/report_11.pug
+++ b/src/pug/blog/report_11.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #11
-  +news_header('21 April 2023', 'report_10', '')
+  +news_header('21 April 2023', 'report_10', 'report_12')
 
   h3 Beta version with alphanumeric input methods
   p As a continuation of the research on #[+a('alphanumeric_input') alphanumeric input], we now implemented an early version of some input methods (Glyph-stick, Daisywheel, 8-slot quick chat macros, and on-screen keyboard shortcut) and released it as #[+ax(org.fw_release+'0.89.0-beta') Firmware 0.89.0-beta].
