12th progress report

--- a/src/pug/blog/report_12.pug
+++ b/src/pug/blog/report_12.pug
@@ -24,7 +24,8 @@ block content
   //-h3 Review unit request from Linux Media
   
   h3 Returnal video
-  p We are still having fun, playing computer games. We now published a new video, demonstrating the Alpakka with #[+ax('https://www.youtube.com/watch?v=i3ULDtX_gHE') Returnal] from Housemarque. Check it out!
+  p We are still having fun, playing computer games. We now published a new video, demonstrating the #[+ax('https://www.youtube.com/watch?v=i3ULDtX_gHE') Alpakka with Returnal] from Housemarque.
+  p Check it out!
   hr
 
   //-h3 Make magazine article
