--- a/src/pug/alpakka/manual/profiles.pug
+++ b/src/pug/alpakka/manual/profiles.pug
@@ -21,6 +21,7 @@ block content
   p Notice how the #[em LEDs] on the controller indicate which profile is active, and the direction of the LED matches the direction of the D-pad.
   p After selecting the most fitting profile for a game, the buttons will never match 100% with your preferences, instead go to the in-game settings and change the key binds as you like, just as you would do when using a keyboard and mouse.
   p These are the built-in profiles:
+  br
 
 
   div.card.center.pad(style='margin-bottom:20px')
@@ -76,6 +77,12 @@ block content
       i.dim Not available yet
 
   p: i (Some of these profiles are still being developed or waiting for more feedback).
+  hr
+
+  h3 About the home button
+  p Holding the #[em Home #[+home]] button, makes the #[+a('profile_home') Home] profile temporally active (until release). Showing all the LEDs on. This allow to switch profile and access additional functions of the controller.
+  p Double pressing the #[em Home #[+home]] button, makes the button to behave as the native #[em gamepad home button]. This allows for example to bring Steam Big Picture overlay.
+  p Double-pressing and holding the #[em Home #[+home]] button, makes the #[+a('profile_console_legacy') Console Legacy] profile temporally active (until release). Showing all the LEDs off. This allows for example to use shortcuts in the Steam Deck.
   hr
 
   h3 Create or edit profiles
