--- a/src/pug/alpakka/manual/dev_profiles.pug
+++ b/src/pug/alpakka/manual/dev_profiles.pug
@@ -21,97 +21,102 @@ block content
   h3 Button behaviors
   p Depending on the behavior there may be primary and secondary actions. The possible behaviors are:
 
-  table.manual.hdiv.col4
+  table.manual.hdiv.col3
     tr
-      th NORMAL
+      td: b NORMAL
+      th Primary actions
+      th Secondary actions
+    tr
       th Actions triggered
+      td When the button is pressed
+      td -
+    tr
       th Actions held
+      td Yes
+      td -
+    tr
       th Actions released
-    tr
-      td Primary actions
-      td When the button is pressed
-      td While the button is pressed
       td When the button is released
-    tr
-      td Secondary actions
-      td -
-      td -
       td -
 
-  table.manual.hdiv.col4
+  table.manual.hdiv.col3
     tr
-      th HOLD_EXCLUSIVE #[br] HOLD_EXCLUSIVE_LONG
-      th
-      th
-      th
+      td: b HOLD_EXCLUSIVE #[br] HOLD_EXCLUSIVE_LONG
+      th Primary actions
+      th Secondary actions
     tr
-      td Primary actions
+      th Actions triggered
       td When the button is released before the time threshold
-      td No
-      td Immediately
-    tr
-      td Secondary actions
       td When the button is pressed for longer than the time threshold
-      td While the button is pressed
-      td When the button is released
-
-  table.manual.hdiv.col4
     tr
-      th HOLD_OVERLAP
-      th
-      th
-      th
-    tr
-      td Primary actions
-      td When the button is pressed
-      td While the button is pressed
-      td When the button is released
-    tr
-      td Secondary actions
-      td When the button is pressed for longer than the time threshold
-      td While the button is pressed
-      td When the button is released
-
-  table.manual.hdiv.col4
-    tr
-      th HOLD_OVERLAP_EARLY
-      th
-      th
-      th
-    tr
-      td Primary actions
-      td When the button is released before the time threshold
+      th Actions held
       td No
-      td Immediately
+      td Yes
     tr
-      td Secondary actions
-      td When the button is pressed
-      td While the button is pressed
+      th Actions released
+      td Immediately
       td When the button is released
 
-  table.manual.hdiv.col4
+  table.manual.hdiv.col3
     tr
-      th STICKY
-      th
-      th
-      th
+      td: b HOLD_OVERLAP
+      th Primary actions
+      th Secondary actions
     tr
-      td Primary actions
+      th Actions triggered
       td When the button is pressed
-      td Permanently
+      td When the button is pressed for longer than the time threshold
+    tr
+      th Actions held
+      td Yes
+      td Yes
+    tr
+      th Actions released
+      td When the button is released
+      td When the button is released
+
+  table.manual.hdiv.col3
+    tr
+      td: b HOLD_DOUBLE_PRESS #[br] (eg: Home button)
+      th Primary actions
+      th Secondary actions
+    tr
+      th Actions triggered
+      td When the button is pressed only once within the time threshold
+      td When the button is pressed twice within the time threshold
+    tr
+      th Actions held
+      td Yes
+      td Yes
+    tr
+      th Actions released
+      td When the button is released
+      td When the button is released
+
+  table.manual.hdiv.col3
+    tr
+      td: b STICKY #[br] (eg: Alt-tabbing)
+      th Primary actions
+      th Secondary actions
+    tr
+      th Actions triggered
+      td When the button is pressed
+      td When the button is pressed
+    tr
+      th Actions held
+      td Yes
+      td Yes
+    tr
+      th Actions released
       td When the profile is changed
-    tr
-      td Secondary actions
-      td When the button is pressed
-      td While the button is pressed
       td When the button is released
-  hr
 
+  hr
   h3 Behavior timing
   p Also for now, Button behavior time thresholds are defined as config constants:
   ul
     li: em CFG_PRESS_DEBOUNCE
+    li: em CFG_DOUBLE_PRESS
     li: em CFG_HOLD_EXCLUSIVE_TIME
     li: em CFG_HOLD_EXCLUSIVE_LONG_TIME
     li: em CFG_HOLD_OVERLAP_TIME
-    li: em CFG_HOLD_OVERLAP_EARLY_TIME
